--- a/index.html
+++ b/index.html
@@ -1,24 +1,46 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" ng-app="d3chartSample">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="initial-scale=1 ,user-scalable=no, maximum-scale=1,width=device-width"/>
+    <title>{{title}}</title>
+    <link rel="stylesheet" href="styles/css/angular-material.min.css"/>
+    <link rel="stylesheet" href="styles/css/bootstrap.min.css"/>
+      <link rel="stylesheet" href="styles/css/d3.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
    
-    <link rel="stylesheet" href="//rawgit.com/angular/bower-material/master/angular-material.css"> 
-    <link rel="stylesheet" href="Styles/d3.css">
+    <!-- Jquery -->
+    <script src="scripts/vendor/jquery.min.js"></script>
+    <script type="text/javascript">
+        $(window).load(function () {
+            $(".page-load-spinner").fadeOut("slow");
+        })
+    </script>
 </head>
-<body ng-app="d3chartSample" ng-controller="d3ForceCtrl" layout="column" >
-<div id="d3Force"  >
-    <md-button ng-click="loadData()">Draw Angularjs </md-button>
-    <linear-chart/>
-</div>
-   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular.js"></script>
-   <script src="//rawgit.com/angular/bower-material/master/angular-material.min.js"></script>
-   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular-animate.min.js"></script>
-   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular-aria.min.js"></script>
-   <script src="//cdn.jsdelivr.net/angular-material-icons/0.4.0/angular-material-icons.min.js"></script> 
-   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.16/d3.js"> </script>
-    <script src="script.js"></script>
-   <script src="Directives/charts/d3Force.js"> </script>
-  
 
+<body layout="column">
+<div class="page-load-spinner">
+    <div class="sk-folding-cube">
+        <div class="sk-cube1 sk-cube"></div>
+        <div class="sk-cube2 sk-cube"></div>
+        <div class="sk-cube4 sk-cube"></div>
+        <div class="sk-cube3 sk-cube"></div>
+    </div>
+</div>
+<div ui-view style="min-height:100vh" layout="column"></div>
+
+
+<!--Angular Scripts-->
+<script src="scripts/vendor/angular.min.js"></script>
+<script src="scripts/vendor/angular-animate.min.js"></script>
+<script src="scripts/vendor/angular-aria.min.js"></script>
+<!--Angular Material-->
+<script src="scripts/vendor/angular-material.min.js"></script>
+<script src="scripts/vendor/angular-ui-router.min.js"></script>
+ <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.16/d3.js"> </script>
+
+<script src="scripts/app.js"></script>
+<script src="scripts/directives/charts/d3Force.js"> </script>
+<script src="scripts/directives/charts/sunBurst.js"> </script>
+<script src="scripts/directives/charts/d3-collapsible-tree.js"> </script>
 </html>
- 
